New changes by Franklin

--- a/views/index.erb
+++ b/views/index.erb
@@ -53,10 +53,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#calculator">Calculator</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Services</a>
+                        <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -77,7 +77,7 @@
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">
                             <br></p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#calculator" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -86,42 +86,51 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!-- Calculator Section -->
+    <section id="calculator" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2> About NYC Ride </h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2> Calculator </h2>
+                <p>Please go to<a href="https://www.waze.com/livemap"> Waze.com </a> for time and distance of your route, enter that below</p>
+                <p></p>
+                <p></p>
             </div>
         </div>
     </section>
 
     <!-- services Section -->
-    <section id="download" class="content-section text-center">
+    <section id="services" class="content-section text-center">
         <div class="services-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Different Taxi Services in NYC</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <//a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg"></a>
+                    <p></p>
+                    
                 </div>
             </div>
         </div>
-     <center> 
-     <table align="right"style="width:80%">
-  
+    <table align="right"style="width:80%">
   <tr>
     <th>Type of Uber</th>
-    <th>Savings</th>
+    <!--<th align="left">Savings</th>-->
   </tr>
   <tr>
-    <td>January</td>
-    <td>$100</td>
+    <td>UberX</td>
+    <td>Least expensive service from Uber. Allows 4 passengers. Most likely to get cars like Toyota Prius, Honda Accord. </td>
+  </tr>
+  
+  <tr>
+    <td>UberXL</td>
+    <td align="right"><span style="display: inline;">Has a higher fare price than UberX. Allows 6 passengers. Includes cars like SUVs and Mini Vans.</span>
+     
+</td>
   </tr>
   <tr>
-    <td>February</td>
+    <td>Uber Select</td>
+    <td>$50</td>
+  </tr>
+  <tr>
+    <td>Uber Black</td>
     <td>$50</td>
   </tr>
 </table>
@@ -132,20 +141,18 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Developers info</h2>
+                <p>Feel free to email us to provide any type of feedback</p>
+                <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/franklin97/final-project" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -157,7 +164,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy;Developed by anonymous coders</p>
         </div>
     </footer>
 
