--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -10,6 +10,17 @@ body {
   color: black;
   background-color: white;
 }
+.dropdown-container {
+ position: relative;
+
+}
+.dropdown-menu {
+ position: absolute;
+ top: 100%; /* Bottom of button */
+ right: 0;
+ margin-left: -100px; /* More to the left */
+}
+
 html {
   width: 100%;
   height: 100%;
