--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>NYC RIDE</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="../css/grayscale.min.css" rel="stylesheet">
+    <link href="../css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -112,7 +112,7 @@
     <table align="right"style="width:80%">
   <tr>
     <th>Type of Uber</th>
-    <!--<th align="left">Savings</th>-->
+    
   </tr>
   <tr>
     <td>UberX</td>
@@ -159,12 +159,12 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!--<div id="map"></div>-->
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;Developed by anonymous coders</p>
+            <p>Copyright &copy;Developed by Anonymous Coders</p>
         </div>
     </footer>
 
