--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+<!----Tables-->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -74,7 +77,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"></h1>
+                        <h1 class="brand-heading">NYC RIDE</h1>
                         <p class="intro-text">
                             <br></p>
                         <a href="#calculator" class="btn btn-circle page-scroll">
@@ -94,6 +97,29 @@
                 <p>Please go to<a href="https://www.waze.com/livemap"> Waze.com </a> for time and distance of your route, enter that below</p>
                 <p></p>
                 <p></p>
+              <form>
+                Time:<br>
+                <input type="text" name="time">
+                <br>
+                Distance:<br>
+                <input type="text" name="distance">
+                <br><br>
+                <div class="form-group">
+     <label for="sel1">Day:</label>
+     <select class="form-control" id="sel1">
+       <option>Select</option>
+       <option>Weekday</option>
+       <option>Weekend</option>
+     </select>
+                  <div class="form-group">
+     <label for="sel1">Traffic:</label>
+     <select class="form-control" id="sel1">
+       <option>Select</option>
+       <option>Regular</option>
+       <option>Rush hour</option>
+     </select>
+                <br><br><br><br><input type="submit" value="Calculate">
+              </form>
             </div>
         </div>
     </section>
@@ -105,43 +131,109 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Different Taxi Services in NYC</h2>
                     <p></p>
-                    
+
                 </div>
             </div>
         </div>
-    <table align="right"style="width:80%">
-  <tr>
-    <th>Type of Uber</th>
-    
-  </tr>
-  <tr>
-    <td>UberX</td>
-    <td>Least expensive service from Uber. Allows 4 passengers. Most likely to get cars like Toyota Prius, Honda Accord. </td>
-  </tr>
+    <div class="container">
+  <h2>Uber Services</h2>
   
-  <tr>
-    <td>UberXL</td>
-    <td align="right"><span style="display: inline;">Has a higher fare price than UberX. Allows 6 passengers. Includes cars like SUVs and Mini Vans.</span>
-     
+  <table class="table">
+   
+    <tbody>
+      <tr>
+        <td>Uber X</td>
+        <td>Least expensive service from Uber. Allows 4 passengers.</td>
+        
+      </tr>
+      <tr>
+        <td>Uber XL</td>
+        <td>Has a higher fare price than UberX. Allows 6 passengers. Includes cars like SUVs and Mini Vans.</td>
+        
+      </tr>
+      <tr>
+        <td>Uber Select</td>
+        <td>More luxurious and expensive than UberX and UberXL. Allows 4 passengers. All cars have a leather interior.Includes cars like BMW, Mercedes, and Audi. </td>
+      </tr>
+      <tr>
+        <td>Uber Black</td>
+        <td>Executive service. Highest fare price.</td>
+       
+     </tr>
+    </tbody>
+  </table>
+</div>
+<div class="container">
+  <h2>
+Lyft Services</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Lyft</td>
+        <td>Lowest price. Allows 4 passengers.</td>
+        
+      </tr>
+      <tr>
+        <td>Lyft Plus</td>
+        <td>More pricey than Lyft. Allows 6 or more passengers.</td>
+        
+      </tr>
+      <tr>
+        <td>Lyft Premier-</td>
+        <td>Luxury sedan. Allows 4 passengers.</td>
+        
+      </tr>
+      <tr>
+        <td>Lyft Line</td>
+        <td>This service allows you to share a ride with someone who is going along the same route.</td>
+        </tr>
+    </tbody>
+  </table>
+  <div class="container">
+  <h2>VIA Service</h2>
+  
+  <table class="table">
+    
+    <tbody>
+      <tr>
+     <td>Car pooling service, each ride is $5 plus tax on weekdays, a very cheap option however you may have to take more stops for other via passengers and you’ll have to share the ride with them.
 </td>
   </tr>
-  <tr>
-    <td>Uber Select</td>
-    <td>$50</td>
+    </tbody>
+  </table>
+</div>
+
+<div class="container">
+  <h2>NYC Taxi</h2>
+  
+  <table class="table">
+    
+    <tbody>
+      <tr>
+     <td>The classic yellow cab, passenger amount may vary, no app to call them, you have to find a cab.
+
+</td>
   </tr>
-  <tr>
-    <td>Uber Black</td>
-    <td>$50</td>
-  </tr>
-</table>
-</center> 
-    </section>
+    </tbody>
+  </table>
+</div>
+</div>
+
+
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Developers info</h2>
+                <p>Made by Alexander Benjamin,Franklin Salazar and Kayla</p>
                 <p>Feel free to email us to provide any type of feedback</p>
                 <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
                 </p>
@@ -152,7 +244,7 @@
                     <li>
                         <a href="https://github.com/franklin97/final-project" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
-                    
+
                 </ul>
             </div>
         </div>
