--- a/views/results.erb
+++ b/views/results.erb
@@ -90,10 +90,17 @@
     <section id="calculator" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2> Calculator </h2><br>
-              <h1><%=@via_fare%></h1>
-              <h1><%=@taxi_fare%></h1>
-
+                <h1> Calculator Prices </h1><br>
+              <h2><%=@via_fare%></h2>
+              <h2><%=@taxi_fare%></h2>
+              <h2><%=@uberX_fare%></h2>
+              <h2><%=@uberXL_fare%></h2>
+              <h2><%=@uberBlack_fare%></h2>
+              <h2><%=@uberSUV_fare%></h2>
+              <h2><%=@lyft_standard%></h2>
+              <h2><%=@lyft_plus%></h2>
+              <h2><%=@lyft_premier%></h2>
+              <h2><%=@lyft_line%></h2>
             </div>
         </div>
     </section>
