--- a/views/results.erb
+++ b/views/results.erb
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"></h1>
+                        <h1 class="brand-heading">NYC RIDE</h1>
                         <p class="intro-text">
                             <br></p>
                         <a href="#calculator" class="btn btn-circle page-scroll">
