--- a/views/index.erb
+++ b/views/index.erb
@@ -231,7 +231,7 @@ Lyft Services</h2>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Developers info</h2>
-                <p>Made by Alexander Benjamin, Franklin Salazar and Kayla<p>
+                <p>Made by Alexander Benjamin, Franklin Salazar and Kayla Davila<p>
                 <p>Feel free to email us to provide any type of feedback</p>
                 <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
                 </p>
