--- a/views/results.erb
+++ b/views/results.erb
@@ -149,7 +149,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Developers info</h2>
-                <p>Made by Alexander Benjamin, Franklin Salazar, Kayla<p>
+                <p>Made by Alexander Benjamin, Franklin Salazar, Kayla Davila<p>
                 <p>Feel free to email us to provide any type of feedback</p>
                 <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
                 </p>
