finding error draft

--- a/views/results.erb
+++ b/views/results.erb
@@ -141,7 +141,6 @@
     <td>$50</td>
   </tr>
 </table>
-</center>
     </section>
 
     <!-- Contact Section -->
@@ -151,8 +150,7 @@
                 <h2>Developers info</h2>
                 <p>Made by Alexander Benjamin, Franklin Salazar, Kayla Davila<p>
                 <p>Feel free to email us to provide any type of feedback</p>
-                <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
-                </p>
+                <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a></p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
