--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -132,7 +132,7 @@ a:focus {
   display: table;
   width: 100%;
   height: auto;
-  padding: 100px 0;
+  padding: 100px;
   text-align: center;
   color: white;
   background: url(../img/intersection.jpg) no-repeat bottom center scroll;
