--- a/views/results.erb
+++ b/views/results.erb
@@ -235,7 +235,7 @@ Lyft Services</h2>
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;Developed by Anonymous Coders</p>
+            <p>Copyright &copy;Developed by Upperline Code School Student</p>
         </div>
     </footer>
 
