--- a/views/index.erb
+++ b/views/index.erb
@@ -236,7 +236,7 @@ Lyft Services</h2>
                 <p><a href="mailto:nycride@gmail.com">nycride@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    
+
                     <li>
                         <a href="https://github.com/bengo1023/final-project" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
@@ -252,7 +252,7 @@ Lyft Services</h2>
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;Developed by Anonymous Coders</p>
+            <p>Copyright &copy;Developed by Upperline Code School Student</p>
         </div>
     </footer>
 
